--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -14,6 +14,7 @@ jobs:
   job2:
     name: Job2
     runs-on: ubuntu-latest
+    needs: job1
     steps:
     - name: Cowsays
       # You may pin to the exact commit or the version.
