--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -4,6 +4,9 @@ on:
   issues:
     types:
     - opened
+
+env:
+  env_variable_for_test: "Environment variable to test"
   
 jobs:
   job1:
@@ -11,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: task1
-      run: echo "Step 1 complete!"
+      run: echo "Step 1 complete! env: $env_variable_for_test"
     - name: task2
-      run: echo "Step 2 complete!"
+      run: echo "Step 2 complete! env: $env_variable_for_test"
   job2:
     name: Job2
     runs-on: ubuntu-latest
@@ -25,7 +28,7 @@ jobs:
       uses: mscoutermarsh/cowsays-action@v1
       with:
       # What does the cow say?
-        text: "Ready for prod–ship it!" # optional, default is Ship it!!!!!
+        text: "Ready for prod–ship it! env: $env_variable_for_test" # optional, default is Ship it!!!!!
         # Color of your cow
         color: magenta  # optional, default is white
           
