--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,11 +7,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Login via Az module
-      uses: azure/login@v1
+    - name: Login to Azure
+      uses: Azure/login@v1.6.1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         enable-AzPSSession: true
+    
+  
       
