--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,20 @@ jobs:
         tenant-id: ${{ secrets.TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         enable-AzPSSession: true
-    
-  
+    - name: Deploy Dev Environment to Azure
+      uses: Azure/arm-deploy@v2
+      with:
+        # Provide the scope of the deployment. Valid values are: 'resourcegroup', 'tenant', 'managementgroup', 'subscription'
+        scope: resourcegroup        
+        resourceGroupName: ${{ secrets.AZURE_RG }}
+        # Specify the path or URL to the Azure Resource Manager template.
+        template: ./InfrastructureAsCode/main.bicep        
+        # Specifies the name of the resource group deployment to create.
+        deploymentName: # optional
+        # Supply deployment parameter values.
+        parameters: environment=dev
       
+              
+
+
+    
