--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Manual workflow
+name: Deploy Azure Resource workflow
 
 on:
   workflow_dispatch:
@@ -12,8 +12,7 @@ jobs:
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        enable-AzPSSession: true
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}        
     - name: Deploy Dev Environment to Azure
       uses: Azure/arm-deploy@v2
       with:
@@ -23,7 +22,7 @@ jobs:
         # Specify the path or URL to the Azure Resource Manager template.
         template: ./InfrastructureAsCode/main.bicep        
         # Specifies the name of the resource group deployment to create.
-        deploymentName: # optional
+        deploymentName: ${{ secrets.AZURE_RG }}
         # Supply deployment parameter values.
         parameters: environment=dev
       
