--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,13 +6,15 @@ on:
 permissions:
   id-token: write
   contents: read
+  pages: write
   
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@main
     - name: Login to Azure
-      uses: Azure/login@v1.6.1
+      uses: Azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.TENANT_ID }}
