--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,34 @@
-name: Deploy Azure Resource workflow
-
 on:
-  workflow_dispatch:
+  workflow_dispatch
 
-permissions:
-  id-token: write
-  contents: read
-  pages: write
-  
+env:
+  targetEnv: dev
+
+name: Azure Bicep
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     steps:
+    # Checkout code
     - uses: actions/checkout@main
-    - name: Login to Azure
-      uses: Azure/login@v1
+
+      # Log into Azure
+    - uses: azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.TENANT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         enable-AzPSSession: true
-    - name: Deploy Dev Environment to Azure
-      uses: Azure/arm-deploy@v2
+
+      # Deploy ARM template
+    - name: Run ARM deploy
+      uses: azure/arm-deploy@v1
       with:
-        # Provide the scope of the deployment. Valid values are: 'resourcegroup', 'tenant', 'managementgroup', 'subscription'
-        scope: resourcegroup        
+        subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
-        # Specify the path or URL to the Azure Resource Manager template.
-        template: ./InfrastructureAsCode/main.bicep        
-        # Specifies the name of the resource group deployment to create.
-        deploymentName: ${{ secrets.AZURE_RG }}
-        # Supply deployment parameter values.
-        parameters: environment=dev
-      
-              
-
-
-    
+        template: ./InfrastructureAsCode/main.bicep
+        parameters: environment=${{ env.targetEnv }}
