--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,15 @@
 on:
-  workflow_dispatch
+  workflow_dispatch:
+   inputs:
+    appenv:
+      type: choice
+      description: Choose the target environment
+      options: 
+        - dev
+        - test
+        - prod
 
-env:
-  targetEnv: dev
-
-name: Azure Bicep
+name: Azure Bicep-Advanced
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -31,4 +36,4 @@ jobs:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./InfrastructureAsCode/main.bicep
-        parameters: environment=${{ env.targetEnv }}
+        parameters: environment=${{ github.event.inputs.appenv }}
