--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -58,3 +58,62 @@ jobs:
       
     - name: Docker Push
       run: docker push $registryName/$repositoryName:$tag
+
+  deploy-to-dev:  
+    runs-on: ubuntu-latest
+    needs: dockerBuildPush
+    environment:
+      name: dev
+      url: https://5j363plv3fto6-dev.azurewebsites.net/
+    
+    steps:
+      - name: 'Login via Azure CLI'
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - uses: azure/webapps-deploy@v2
+        with:
+          app-name: '{your_prefix}-dev'
+          images: 5j363plv3fto6mpnpreg.azurecr.io/techboost/dotnetcoreapp:${{github.run_number}}
+
+  deploy-to-test:  
+    runs-on: ubuntu-latest
+    needs: deploy-to-dev
+    environment:
+      name: test
+      url: https://5j363plv3fto6-test.azurewebsites.net/
+    
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - uses: azure/webapps-deploy@v2
+      with:
+        app-name: '{your_prefix}-test'
+        images: 5j363plv3fto6mpnpreg.azurecr.io/techboost/dotnetcoreapp:${{github.run_number}}
+
+  deploy-to-prod:
+  
+    runs-on: ubuntu-latest
+    needs: deploy-to-test
+    environment:
+      name: prod
+      url: https://5j363plv3fto6-prod.azurewebsites.net/
+    
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - uses: azure/webapps-deploy@v2
+      with:
+        app-name: '{your_prefix}-prod'
+        images: 5j363plv3fto6mpnpreg.azurecr.io/techboost/dotnetcoreapp:${{github.run_number}}
